# anitya-messages

./: .coveragerc  .readthedocs.yaml  .zuul.yaml  MANIFEST.in  README.rst  pyproject.toml  renovate.json  requirements.txt  setup.py  test_requirements.txt  tox.ini
anitya_schema/: __init__.py  base.py  distro_messages.py  project_messages.py
anitya_schema/tests/: test_base.py  test_distro_messages.py  test_project_messages.py  test_schema.py
anitya_schema/tests/fixtures/: org.release-monitoring.prod.anitya.project.version.remove.v2.json
docs/: Makefile  conf.py  contributing.rst  index.rst  release-notes.rst  topics.rst
news/: 31.feature  PR10.dev  _template.rst
